wf-dockerfile-transformer/myproject/sample-node-app/wfapp-helmchart/templates/wfapp-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: wfapp
    name: wfapp
spec:
    internalTrafficPolicy: Cluster
    ports:
        - name: port-8080
          port: 8080
          protocol: TCP
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: wfapp
    sessionAffinity: None
    type: ClusterIP
status:
    loadBalancer: {}

...
