wf-dockerfile-transformer/myproject/sample-node-app/wfapp-helmchart/templates/wfapp-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: myproject.com
          http:
            paths:
                - backend:
                    service:
                        name: wfapp
                        port:
                            name: port-8080
                  path: /wfapp
                  pathType: Prefix
status:
    loadBalancer: {}

...
